# SimplyChess

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ESCAFANDRIN.md  README.md
.agents/: next-session-ui.md
.github/workflows/: release.yml
Config/: supported_keys.ini
config/: window.ini
docs/: Plan de Próximos Pasos.md  architecture.md  conventions.md  escafandrin.md  ideas.md  roadmap.md
include/: Board.h  Button.h  Game.h  GameState.h  MainMenuState.h  MessageBox.h  PauseMenu.h  Piece.h  PromotionMenu.h  State.h
include/chess/: AIEngine.h  Board.h  FastBoard.h  GameSnapshot.h  MoveGen.h  MoveHistory.h  MoveRecord.h  PGNManager.h  Piece.h
include/core/: AudioSystem.h  Game.h
include/states/: GameConfig.h  GameSetupState.h  GameState.h  MainMenuState.h  SettingsState.h  State.h
include/ui/: Button.h  EvalBar.h  MenuButton.h  MessageBox.h  MoveListPanel.h  PauseMenu.h  PromotionMenu.h  TextField.h  WoodPanel.h
resources/: SimplyChess.rc
resources/images/icons/: PeonN.icns
src/: Board.cpp  Button.cpp  Game.cpp  GameState.cpp  MainMenuState.cpp  MessageBox.cpp  PauseMenu.cpp  Piece.cpp  PromotionMenu.cpp  State.cpp  main.cpp
src/chess/: AIEngine.cpp  Board.cpp  FastBoard.cpp  MoveGen.cpp  MoveHistory.cpp  PGNManager.cpp  Piece.cpp
src/core/: AudioSystem.cpp  Game.cpp
src/states/: GameSetupState.cpp  GameState.cpp  MainMenuState.cpp  SettingsState.cpp  State.cpp
src/ui/: Button.cpp  EvalBar.cpp  MenuButton.cpp  MessageBox.cpp  MoveListPanel.cpp  PauseMenu.cpp  PromotionMenu.cpp  TextField.cpp  WoodPanel.cpp
